autocomplete works on ios. Pin list and details page work correctly

--- a/src/pages/pin-detail/pin-detail.scss
+++ b/src/pages/pin-detail/pin-detail.scss
@@ -27,4 +27,8 @@ page-pin-detail {
     height: 200px;
     border: 0;
   }
+
+  li {
+    list-style: none;
+  }
 }
